--- a/kap13/kap13.tex
+++ b/kap13/kap13.tex
@@ -38,7 +38,7 @@ für $b>1$: $\lim\limits_{x\to +\infty}f(x)=+\infty$\\
 \item $f(1)=0$
 \item y-Achse ist senkrechte Asmyptote
 \end{itemize}
-	\section{Rechengesetze}
+			\section{Rechengesetze}
 
 Aus den Potenzgesetzen kann man die Logarithmussätze erhalten.
 
@@ -57,3 +57,11 @@ $\begin{array}{cccl}
 \begin{Bemerkung}
 Die zweite Potenzregel ist nur ein Sonderfall der ersten, da $\sqrt[n]{a}=a^{\frac{1}{n}}$
 \end{Bemerkung}
+
+		\section{Gleichungen lösen}
+
+
+		\section{Logarithmusfunktionen}
+
+	\subsection{Ableitungsregeln}
+	\subsection{Funktionsuntersuchungsbeispiel}
